--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,22 @@
-<p-toolbar>
-    <div class="ui-toolbar-group-left">
-        <h5 class="text-light">Gestor de Qualidade</h5>
-    </div>
-    <div class="ui-toolbar-group-right">
-        <button pButton type="button" icon="pi pi-sign-in" class="ui-button-primary mr-1"></button>
-        <!-- <button pButton type="button" icon="pi pi-sign-out" class="ui-button-danger"></button> -->
-    </div>
-</p-toolbar>
+<div class="bg">
+    <p-toolbar>
+        <div class="ui-toolbar-group-left">
+            <h5 class="text-light">Gestor de Qualidade</h5>
+        </div>
+        <div class="ui-toolbar-group-right">
+            <button
+                pButton
+                type="button"
+                icon="pi pi-sign-in"
+                class="ui-button-primary mr-1"
+                routerLink="/home/login"
+            >
+            </button>
+            <!-- <button pButton type="button" icon="pi pi-sign-out" class="ui-button-danger"></button> -->
+        </div>
+    </p-toolbar>
+    
+    <p-menubar [model]="items"></p-menubar>
+    <router-outlet></router-outlet>
 
-<p-menubar [model]="items"></p-menubar>
-<router-outlet></router-outlet>
+</div>
