--- a/src/styles.css
+++ b/src/styles.css
@@ -3,9 +3,15 @@
 html, body {
     height: 100%;
     margin: 0px;
+    background-color: #343A40;
 }
 
 .bg {
     background: #343A40;
     height: 100%;
+}
+
+.bg-formulario{
+    background: rgba(244,244,244,.9);
+    box-shadow: 0 0 20px rgba(0,0,0,.8)
 }
