--- a/src/app/interno/components/produto/produto.component.html
+++ b/src/app/interno/components/produto/produto.component.html
@@ -1,1 +1,128 @@
-<p>produto works!</p>
+<div class="py-3">
+
+
+    <div class="container d-flex justify-content-center">
+        <div class="bg-formulario p-3 m-3">
+
+            <p-fieldset 
+                [legend]="toRegister ? 'Novo cadastro' : 'Editar'"
+                styleClass="mb-3"
+                *ngIf="toRegister || toEdit"
+            >
+                <form
+                    [formGroup]="produtoForm"
+                    (submit)="save()"
+                >
+                    <div class="row">
+                        <div class="ml-3 mr-3 mb-3">
+                            <div class="mb-3">
+                                <label for="nome">Nome <span class="text-danger">*</span></label>
+                                <input 
+                                    type="text"
+                                    name="nome"
+                                    id="nome"
+                                    class="form-control"
+                                    formControlName="nome"
+                                >
+                            </div>
+                            <div>
+                                <label for="descricao">Descrição <span class="text-danger">*</span></label>
+                                <textarea 
+                                    id="descricao" 
+                                    rows="2"
+                                    cols="50" 
+                                    class="form-control"
+                                    formControlName=descricao
+                                >
+                                </textarea> 
+                            </div>
+                            <div class="mt-3 d-flex justify-content-right">
+                                <button
+                                    type="button"
+                                    class="btn btn-light mr-1"
+                                    (click)="cancel()"
+                                >
+                                    Cancelar
+                                </button>
+                                <button
+                                    type="submit"
+                                    class="btn btn-success"
+                                >
+                                    Salvar
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                
+            </p-fieldset>
+
+            <p-table 
+                [value]="produtos"
+                [responsive]="true"
+                [paginator]="true"
+                [lazy]="true"
+                (onLazyLoad)="loadPage($event)"
+                [totalRecords]="totalRecords"
+                [rows]="10"
+            >
+                <ng-template pTemplate="caption">
+                    <div class="d-flex justify-content-between">
+                        <h5>Lista de produtos</h5>
+                        <button
+                            pButton
+                            type="button"
+                            icon="pi pi-plus"
+                            class="ui-button-success mr-1"
+                            (click)="openRegister()"
+                        >
+                        </button>
+                    </div>
+                </ng-template>
+                <ng-template pTemplate="header">
+                    <tr>
+                        <th>Nome</th>
+                        <th>Descrição</th>
+                        <th>Ações</th>
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-produto>
+                    <tr>
+                        <td>{{produto.nome}}</td>
+                        <td>{{produto.descricao}}</td>
+                        <td>
+                            <div class="d-flex justify-content-center">
+                                <button
+                                    pButton
+                                    type="button"
+                                    icon="pi pi-pencil"
+                                    class="ui-button-warning mr-1"
+                                    (click)="openEdit(produto)"
+                                >
+                                </button>
+                                <button
+                                    *ngIf="produto.ativo"
+                                    pButton
+                                    type="button"
+                                    icon="pi pi-check"
+                                    class="ui-button-success mr-1"
+                                    (click)="deactivate(produto)"
+                                >
+                                </button>
+                                <button
+                                    *ngIf="!produto.ativo"
+                                    pButton
+                                    type="button"
+                                    icon="pi pi-minus"
+                                    class="ui-button-secondary mr-1"
+                                    (click)="deactivate(produto)"
+                                >
+                                </button>
+                            </div>
+                        </td>
+                    </tr>
+                </ng-template>
+            </p-table>
+        </div>
+    </div>
+</div>
