exibindo detalhes da atividade

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,7 @@
                 type="button"
                 icon="pi pi-sign-in"
                 class="ui-button-primary mr-1"
-                routerLink="/home/login"
+                routerLink="/login"
             >
             </button>
             <button
@@ -26,7 +26,7 @@
             </button>
         </div>
     </p-toolbar>
-    
+
     <p-menubar [model]="items"></p-menubar>
     <router-outlet></router-outlet>
 
