--- a/src/app/interno/components/produto/produto.component.html
+++ b/src/app/interno/components/produto/produto.component.html
@@ -1,7 +1,6 @@
 <div class="py-3">
 
-
-    <div class="container d-flex justify-content-center">
+    <div>
         <div class="bg-formulario p-3 m-3">
 
             <p-fieldset
