--- a/src/app/interno/components/atividade/atividade.component.html
+++ b/src/app/interno/components/atividade/atividade.component.html
@@ -20,7 +20,7 @@
                           type="button"
                           icon="pi pi-plus"
                           class="ui-button-success mr-1"
-                          (click)="openRegister()"
+                          routerLink="/interno/atividade-cadastro"
                       >
                       </button>
                   </div>
