--- a/src/app/interno/components/atividade-cadastro/atividade-cadastro.component.html
+++ b/src/app/interno/components/atividade-cadastro/atividade-cadastro.component.html
@@ -18,8 +18,8 @@
               <label>Status <span class="text-danger">*</span></label>
             </div>
             <p-dropdown
-              id="tituloDesafio"
-              [options]="cities1"
+              id="status"
+              [options]="status"
               styleClass="w-100"
             >
             </p-dropdown>
@@ -69,7 +69,8 @@
             </div>
             <p-dropdown
               id="setor"
-              [options]="cities1"
+              [options]="setores"
+              optionLabel="nome"
               styleClass="w-100"
             >
             </p-dropdown>
@@ -82,7 +83,8 @@
             </div>
             <p-dropdown
               id="produto"
-              [options]="cities1"
+              [options]="produtos"
+              optionLabel="nome"
               styleClass="w-100"
             >
             </p-dropdown>
@@ -93,12 +95,7 @@
         <div class="col mb-3">
           <div class="mb-3 table-responsive">
               <p><b>Responsáveis:</b></p>
-              <p-dropdown
-                id="produto"
-                [options]="cities1"
-                styleClass="w-100"
-              >
-              </p-dropdown>
+              <p-autoComplete  [suggestions]="usuarios" optionLabel="nome" ></p-autoComplete>
               <table class="table table-hover">
                 <thead>
                   <tr>
