--- a/src/app/interno/components/atividade-cadastro/atividade-cadastro.component.html
+++ b/src/app/interno/components/atividade-cadastro/atividade-cadastro.component.html
@@ -1,12 +1,17 @@
 <div class="py-3">
 
   <div>
-    <div class="bg-formulario p-3 m-3">
+    <form
+      [formGroup]="atividadeForm"
+      (submit)="onSubmit()"
+      class="bg-formulario p-3 m-3"
+    >
       <div class="row">
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 mb-3">
           <div class="mb-3">
             <label for="titulo">Título <span class="text-danger">*</span></label>
             <input
+              formControlName="titulo"
               type="text"
               name="titulo"
               id="titulo"
@@ -18,6 +23,7 @@
               <label>Status <span class="text-danger">*</span></label>
             </div>
             <p-dropdown
+              formControlName="status"
               id="status"
               [options]="status"
               styleClass="w-100"
@@ -30,6 +36,7 @@
           <div class="mb-3">
             <label for="descricao">Descrição<span class="text-danger"> *</span></label>
             <textarea
+              formControlName="descricao"
               name="descricao"
               id="descricao"
               class="form-control"
@@ -45,7 +52,8 @@
               <label>Data de inicio <span class="text-danger">*</span></label>
             </div>
             <p-calendar
-            [style]="{'width': '100%'}"
+              formControlName="dataInicio"
+              [style]="{'width': '100%'}"
             >
             </p-calendar>
           </div>
@@ -56,6 +64,7 @@
               <label>Data de termino <span class="text-danger">*</span></label>
             </div>
             <p-calendar
+              formControlName="dataFim"
               [style]="{'width': '100%'}"
             >
 
@@ -68,6 +77,7 @@
               <label>Setor <span class="text-danger">*</span></label>
             </div>
             <p-dropdown
+              formControlName="setor"
               id="setor"
               [options]="setores"
               optionLabel="nome"
@@ -82,6 +92,7 @@
               <label>Produto <span class="text-danger">*</span></label>
             </div>
             <p-dropdown
+              formControlName="produto"
               id="produto"
               [options]="produtos"
               optionLabel="nome"
@@ -93,38 +104,62 @@
       </div>
       <div class="row">
         <div class="col mb-3">
-          <div class="mb-3 table-responsive">
-              <p><b>Responsáveis:</b></p>
-              <p-autoComplete  [suggestions]="usuarios" optionLabel="nome" ></p-autoComplete>
+          <p><b>Responsáveis:</b></p>
+          <p-dropdown
+            id="produto"
+            formControlName="responsavel"
+            [options]="responsaveis"
+            optionLabel="nome"
+            styleClass="w-100"
+          >
+          </p-dropdown>
+          <div
+            *ngIf="atividadeForm.value['responsaveis'].length > 0"
+            class="mb-3 table-responsive">
               <table class="table table-hover">
                 <thead>
                   <tr>
-                    <th>nome</th>
-                    <th>email</th>
+                    <th>Nome</th>
+                    <th>Email</th>
+                    <th>Remover</th>
                   </tr>
                 </thead>
 
                 <tbody>
-                  <!-- <tr *ngFor="let responsavel of atividade.responsaveis">
+                  <tr *ngFor="let responsavel of atividadeForm.value['responsaveis']">
                     <td>{{responsavel.nome}}</td>
                     <td>{{responsavel.email}}</td>
-                  </tr> -->
-                  <tr>
-                    <td>Jefferson antônio Pantoja silva</td>
-                    <td>jeffkd35@gmail.com</td>
-                  </tr>
-                  <tr>
-                    <td>Jefferson antônio Pantoja silva</td>
-                    <td>jeffkd35@gmail.com</td>
-                  </tr>
-                  <tr>
-                    <td>Jefferson antônio Pantoja silva</td>
-                    <td>jeffkd35@gmail.com</td>
+                    <td>
+                      <button
+                        pButton
+                        type="button"
+                        icon="pi pi-check"
+                        class="ui-button-success mr-1"
+                    ></button>
+                    </td>
                   </tr>
                 </tbody>
               </table>
           </div>
         </div>
       </div>
-  </div>
+
+      <div class="row">
+        <div class="col mt-3 d-flex justify-content-end">
+          <button
+            type="button"
+            class="btn btn-light mr-1"
+          >
+            Cancelar
+          </button>
+          <button
+            type="submit"
+            class="btn btn-success"
+          >
+            Salvar
+          </button>
+        </div>
+      </div>
+
+    </form>
 </div>
