--- a/src/app/interno/components/setor/setor.component.html
+++ b/src/app/interno/components/setor/setor.component.html
@@ -34,7 +34,7 @@
                                 >
                                 </textarea>
                             </div>
-                            <div class="mt-3 d-flex justify-content-right">
+                            <div class="mt-3 d-flex justify-content-end">
                                 <button
                                     type="button"
                                     class="btn btn-light mr-1"
