--- a/src/app/interno/components/atividade-cadastro/atividade-cadastro.component.html
+++ b/src/app/interno/components/atividade-cadastro/atividade-cadastro.component.html
@@ -19,16 +19,19 @@
             >
           </div>
           <div class="mb-3">
-            <div>
-              <label>Status <span class="text-danger">*</span></label>
-            </div>
-            <p-dropdown
-              formControlName="status"
+            <label>Status <span class="text-danger">*</span></label>
+            <select
+              class="form-control"
               id="status"
-              [options]="status"
-              styleClass="w-100"
+              formControlName="status"
             >
-            </p-dropdown>
+              <option
+                [ngValue]="status.value"
+                *ngFor="let status of status"
+              >
+                {{status.label}}
+              </option>
+            </select>
           </div>
         </div>
 
@@ -53,6 +56,7 @@
             </div>
             <p-calendar
               formControlName="dataInicio"
+              showTime="true"
               [style]="{'width': '100%'}"
             >
             </p-calendar>
@@ -65,6 +69,7 @@
             </div>
             <p-calendar
               formControlName="dataFim"
+              showTime="true"
               [style]="{'width': '100%'}"
             >
 
@@ -73,46 +78,55 @@
         </div>
         <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 mb-3">
           <div class="mb-3">
-            <div>
-              <label>Setor <span class="text-danger">*</span></label>
-            </div>
-            <p-dropdown
-              formControlName="setor"
+            <label for="setor">Setor</label>
+            <select
+              class="form-control"
               id="setor"
-              [options]="setores"
-              optionLabel="nome"
-              styleClass="w-100"
+              formControlName="setor"
             >
-            </p-dropdown>
+              <option
+                [ngValue]="setor"
+                *ngFor="let setor of setores"
+              >
+                {{setor.nome}}
+              </option>
+            </select>
           </div>
         </div>
         <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 mb-3">
           <div class="mb-3">
-            <div>
-              <label>Produto <span class="text-danger">*</span></label>
-            </div>
-            <p-dropdown
-              formControlName="produto"
+            <label for="produto">Produto</label>
+            <select
+              class="form-control"
               id="produto"
-              [options]="produtos"
-              optionLabel="nome"
-              styleClass="w-100"
+              formControlName="produto"
             >
-            </p-dropdown>
+              <option
+                [ngValue]="produto"
+                *ngFor="let produto of produtos"
+              >
+                {{produto.nome}}
+              </option>
+            </select>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col mb-3">
-          <p><b>Responsáveis:</b></p>
-          <p-dropdown
-            id="produto"
+          <label for="responsavel">Responsáveis</label>
+          <select
+            class="form-control"
+            id="responsavel"
             formControlName="responsavel"
-            [options]="responsaveis"
-            optionLabel="nome"
-            styleClass="w-100"
           >
-          </p-dropdown>
+            <option selected>Selecione</option>
+            <option
+              [ngValue]="responsavel"
+              *ngFor="let responsavel of responsaveis"
+            >
+              {{responsavel.nome}}
+            </option>
+          </select>
           <div
             *ngIf="atividadeForm.value['responsaveis'].length > 0"
             class="mb-3 table-responsive">
@@ -133,8 +147,9 @@
                       <button
                         pButton
                         type="button"
-                        icon="pi pi-check"
-                        class="ui-button-success mr-1"
+                        icon="pi pi-trash"
+                        class="ui-button-danger mr-1"
+                        (click)="removeResponsavel(responsavel)"
                     ></button>
                     </td>
                   </tr>
@@ -147,6 +162,7 @@
       <div class="row">
         <div class="col mt-3 d-flex justify-content-end">
           <button
+            routerLink="/interno/atividade"
             type="button"
             class="btn btn-light mr-1"
           >
